# codingame_starter

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  merge_source_files
src/: bot.cpp  configuration.h
tests/: unit_tests.cpp
